# port-whisperer

./: .gitignore  Cargo.toml  README.md  agents.md  install.sh
.github/workflows/: ci.yml  release.yml
docs/: index.html
docs/archive/: decisions.md  lessons.md
docs/learning/: external-references.md  new-things.md
docs/retros/: 2026-05-23-stability-phase.md
src/: display.rs  main.rs  scanner.rs
tests/: integration_tests.rs
